# dexsent_task2

./: .gitignore  Readme.md
src/dexsent_control/: CMakeLists.txt  dexsent_control.xml  package.xml
src/dexsent_control/config/: controllers.yaml
src/dexsent_control/include/dexsent_control/: cartesian_controller.hpp
src/dexsent_control/launch/: dual_arm_control.launch.py  visual_only.launch.py
src/dexsent_control/scripts/: cartesian_controller.py  coordinator.py  dual_arm_gui.py
src/dexsent_control/src/: cartesian_controller.cpp
src/dexsent_description/: CMakeLists.txt  package.xml
src/dexsent_description/urdf/: dual_box.urdf  dual_system.urdf
src/dexsent_description/urdf/archive/: clean_dual.urdf  clean_dual_colored.urdf  dexsent_complete.urdf  dexsent_ghost.urdf  dexsent_safe.urdf  dual_real.urdf  dual_real_mesh.urdf.xacro  ghost_robot.urdf  system.urdf.xacro
